[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Cards/CardPickUp.gd" type="Script" id=1]
[ext_resource path="res://Assets/Cards/CardPickup6.png" type="Texture" id=2]
[ext_resource path="res://Assets/Cards/CardPickup3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Cards/CardPickup2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Cards/CardPickup4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Cards/CardPickup5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Cards/CardPickup7.png" type="Texture" id=7]
[ext_resource path="res://Assets/Cards/Card.png" type="Texture" id=8]
[ext_resource path="res://Assets/Cards/CardPickup1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": false,
"name": "pickUp",
"speed": 11.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.55673, 3.30028 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.89777, 8.16086 )

[node name="Card" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.5, -6 )
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -3.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.117985, -5.84022 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
